<resources>
    <string name="app_name">TMS</string>
    <string name="google_map_api_key">AIzaSyDvEGRFUQwLHEXpLV_PMxZPhRstvFZU9Jk</string>
    <string-array name="customerTypePhotoArray">
        <item>Tất cả</item>
        <item>Đã chụp hình</item>
        <item>Chưa chụp hình</item>
    </string-array>
    <string name="fivescenter">5S Call Center</string>
    <string name="ChooseOrderCap">Chưa thể chụp ảnh , chọn trang đặt hàng để chụp ảnh</string>
    <string name="OrderCap">Chụp ảnh</string>
    <string name="errorCheck">Không thể chọn hơn&#160;</string>
    <string name="routes">&#160;tuyến</string>
    <string-array name="mainMenuArray">
        <item>Trong khu vực</item>
        <item>Ngoài Khu vực</item>
        <item>Báo cáo</item>
        <item>Chụp hình</item>
        <item>Đồng bộ</item>
        <item>Hệ thống</item>
        <item>Thêm KH</item>
        <item>Thông báo</item>
        <item>eLucky</item>
        <item>Đơn hàng</item>
        <item>5P Tracking</item>
        <item>POC</item>
        <item>@string/TitleMyFile</item>
        <item>Khảo sát</item>
        <item>Bản đồ</item>
        <item>Messenger</item>
    </string-array>
    <string-array name="mainMenuArrayforCPTH">
        <item>In-range</item>
        <item>Out-range</item>
        <item>Reports</item>
        <item>Take photo</item>
        <item>Sync</item>
        <item>Config</item>
        
        <item>Messenger</item>
        
        
        
        
        
        
        <item>Route On Map</item>
    </string-array>
    <string-array name="reportsMenuArray">
        <item>DS ghi nhận Tg đến</item>
        <item>Sales Mtd</item>
        <item>Bc các chỉ tiêu</item>
        <item>Bc Hiệu suất CV</item>
        <item>Không Giao Dịch</item>
        <item>Xếp hạng</item>
    </string-array>
    <string-array name="reportsMenuArrayForCPTH">
        <item>Report KPI</item>
        <item>Salary</item>
    </string-array>
    <string-array name="EluckyReason">
        <item>Chọn lý do</item>
        <item>Giải thưởng quá thấp</item>
        <item>Thủ tục nhận giải phức tạp</item>
        <item>Khác</item>
    </string-array>
    <string name="Order">Đơn hàng</string>
    <string name="msgSurvey">Hiện tại, bạn không có chương trình khảo sát.</string>
    <string name="msgSurvey1">Hiện tại, chương trình đang khóa</string>
    <string name="msgPlayElucky">Vui lòng TimeIn hoặc TimeIn lại trước khi sử dụng tính năng này.</string>
    <string name="msgPlayEluckySync">Hiện tại chưa có chương trình quay số nào đang chạy, vui lòng liên hệ bộ phận hỗ trợ hoặc Giám sát phụ trách hoặc chọn Chỉnh sửa - Home - Đồng bộ để  đồng bộ lại	</string>
    <string name="TextVieweEluckyReason">Lý do nếu không nhân thưởng</string>
    <string name="ButtonTrial">Trial</string>
    <string name="Stock">Kiểm kho CH</string>
    <string name="TextViewStock">Nhập SLSP Khách hàng</string>
    <string name="ButtonPlay">Play</string>
    <string name="TextViewePlayer">PLAYER</string>
    <string name="msgSystemParameter">Thông số hệ thống: ....</string>
    <string name="msgOrders">Đơn hàng: ....</string>
    <string name="msgCustomerlist">DSKH: ....</string>
    <string name="msgTimeInList">DS ghi nhận TG đến: ....</string>
    <string name="msgRoute">Tuyến đường đi: ....</string>
    <string name="msgPhoto">Hình ảnh: ....</string>
    <string name="msgSalesRoute">Tuyến bán hàng: ....</string>
    <string name="msgUpdateVersion">Cập nhập phiên bản mới (Vui lòng chờ): ....</string>
    <string name="msgReportAndNotification">Báo cáo &amp; Thông báo ....</string>
    <string name="msgAdvertiseFile">File quảng cáo: ....</string>
    <string name="msgPasswdIncorrect">Mật khẩu không chính xác!.</string>
    <string name="msgInactivesuccessfully">Bỏ kích hoạt thành công!.</string>
    <string name="msgActivesuccessfully">Kích hoạt thành công!.</string>
    <string name="msgGetGPSFaild">Không kết nối được vệ tinh, lấy tọa độ điểm bán thất bại, vui lòng thử lại!.</string>
    <string name="msgGPSWifiNotTurnOn">Không kết nối được vệ tinh, lấy tọa độ điểm bán thất bại, vui lòng thử lại với kết nối wifi (trừ 3G)!.</string>
    <string name="msgNotAllowUploadBy3G">Upload thất bại, vui lòng thử lại với kết nối wifi!.</string>
    <string name="msgUploadFaildWithSignal">Upload thất bại, vui lòng thử kểm tra lại tính hiệu mạng!.</string>
    <string name="msgSynchronizing">Hệ thống đang xử lý dữ liệu, vui lòng thử lại sau 5 phút !.</string>
    <string name="msgDownLoadSuccess">Download thành công!</string>
    <string name="msgDownLoadFaildBy3G">Download thất bại, vui lòng thử lại với kết nối wifi!</string>
    <string name="msgDownloadFaildWithSignal">Download thất bại,  vui lòng thử lại tính hiệu mạng!</string>
    <string name="msgGetLocationWithAccuraycToLarge">Lấy tọa độ thất bại. Vị trí đứng hiện tại có độ sai số (@0 m) lớn hơn sự cho phép của hệ thống (@1 m). Vui lòng di chuyển sang vị trí khác.</string>
    <string name="msgUpdateSuccess">Cập nhật thành công!</string>
    <string name="msgUpdateFaild">Cập nhật thất bại, vui lòng thử lại!</string>
    <string name="msgDeleteSuccess">Xóa thành công!</string>
    <string name="msgDeleteFaild">Xóa thất bại, vui lòng thử lại!</string>
    <string name="msgInsertFaild">Thêm thất bại, vui lòng thử lại!</string>
    <string name="msgInsertSuccess">Thêm thành công!</string>
    <string name="msgUploadSuccess">Upload thành công!</string>
    <string name="msgNoCustomerToDelete">Không có KH nào cần xóa!.</string>
    <string name="msgCustomerCodeExist">Mã Kh đã tồn tại!</string>
    <string name="msgCustomerCode">Mã KH không được trống!</string>
    <string name="msgCustomerName">Tên KH không được trống!</string>
    <string name="msgCustomerAddress">Địa chỉ KH không được trống!</string>
    <string name="msgCustomerGeocode">Tọa độ KH không được trống!</string>
    <string name="msgGetGeoCodeSuccessul">Lấy tọa độ điểm bán hàng thành công!</string>
    <string name="msgCustomerNotSelectToEdit">Vui lòng chọn Kh để chỉnh sửa!</string>
    <string name="msgSetTimeOutSuccess">Thiết lập thời đi thành công!</string>
    <string name="msgSetTimeInSuccess">Thiết lập thời đến thành công!</string>
    <string name="msgDialogTryingGetGeocode">Đang thử lấy tọa độ điểm bán hàng</string>
    <string name="msgGetGeocodeSale">Đang thử lấy vị trí hiện tại</string>
    <string name="msgDialogTryingGetGeocodeAgain">Bạn có muốn thử lấy lại tọa độ điểm bán hàng</string>
    <string name="msgTitleErrorGPS">
        Không thể định vị được vị trí của bạn!\nCác trường hợp có thể xảy ra:
    </string>
    <string name="msgErrorGPS">
        1) Kiểm tra lại chế độ định vị đã được bật hay chưa.\n2) Có thể do thời tiết xấu hoặc đang ở trong tòa nhà cao tầng
    </string>
    <string name="msgPleaseWaitting">Vui lòng chờ...</string>
    <string name="msgPreventGetGeoCode">KH này không thể lấy tọa độ điểm bán hàng vì tính năng này đã được khóa bởi admin</string>
    <string name="msgDownloadFolderDSPSuccess">Download tuyến bán hàng thành công!</string>
    <string name="msgDownloadFolderSPINSuccess">Download Elucky thành công!</string>
    <string name="msgUploadFolderDSPSuccess">Upload đơn hàng thành công!</string>
    <string name="msgDownloadFolderDSPFaild">Không có tuyến bán hàng mới để download!</string>
    <string name="msgUploadFolderDSPFaild">Không có đơn hàng mới để upload!</string>
    <string name="msgDialogSynchronize">Đồng bộ dữ liệu</string>
    <string name="msgDialogRefesh">Làm mới dữ liệu</string>
    <string name="msgDialogRefeshWaitting">Đang làm mới dữ liệu vui lòng chờ...</string>
    <string name="msgDialogSynchronizeWaittingUpload">Đang upload dữ liệu vui lòng chờ...</string>
    <string name="msgDialogSynchronizeWaittingDownload">Đang download dữ liệu vui lòng chờ...</string>
    <string name="msgDialogTimeIn">Thiết lập thời gian đến</string>
    <string name="msgDialogDeletePhoto">Xóa hình ảnh đang chọn</string>
    <string name="msgDialogSaveCustomer">Lưu thông tin khách hàng</string>
    <string name="msgDialogDeleteCustomer">Xóa khách hàng đang chọn</string>
    <string name="msgDialogDeleteAllCustomerHasBeenSynch">Xóa tất cả các Kh đã được đồng bộ về server ?</string>
    <string name="msgAreYouSure">Bạn có chắc không?</string>
    <string name="msgYes">Đồng ý</string>
    <string name="msgNo">Hủy bỏ</string>
    <string name="tvMonthViewReport">Khách hàng không đặt hàng trong:</string>
    <string name="msgNoData">Không có dữ liệu</string>
    <string name="msgPDADateTimeValid">Thời gian của PDA không hợp lệ, vui lòng chỉnh lại giờ.</string>
    <string name="msgDBNotValid">Cấu hình không hợp lệ, vui lòng liên hệ đội hỗ trợ .</string>
    <string name="msgIsValidSalesCode">Thiết bị này đã được đăng ký với tài khoản khác, vui lòng liên hệ đội hỗ trợ.!"</string>
    <string name="MgsErrorWhenSyncImeiNoActive">IMEI không hợp lệ, vui lòng liên hệ đội hỗ trợ .</string>
    <string name="invalidTime">Thời gian của bạn sai giờ của hệ thống.\n FPIT sẽ không cho phép bạn sử dụng chức năng này</string>
    <string name="MgsUploadeLuckyDialog">Hiện tại chưa có chương trình eLucky nào đang chạy.\n\t- Vui lòng đồng bộ lại bằng cách nhấn nút \"Đồng ý\" nếu có chương trình eLucky.\n\t- Nhấn nút \"Hủy bỏ\" nếu bạn không thực sự muốn vào eLucky</string>
    <string name="ButtonExit">Thoát</string>
    <string name="ButtonActive">Kích hoạt</string>
    <string name="ButtonInActive">Bỏ kích hoạt</string>
    <string name="ButtonHome">Trở về</string>
    <string name="btnRefesh">Vị trí hiện tại</string>
    <string name="ButtonRefeshReport">Cập nhật dữ liệu</string>
    <string name="ButtonSave">Lưu</string>
    <string name="ButtonSummary">Tổng kết</string>
    <string name="TextViewUserCode">Nhân viên:</string>
    <string name="TextViewConfiguration">Cấu hình</string>
    <string name="TextVieweLucky">eLucky</string>
    <string name="TextViewPassword">Mật khẩu</string>
    <string name="TextViewCaptionCustomerInRange">KH trong khu vực</string>
    <string name="TextViewCaptionCustomerOutRange">KH ngoài khu vực</string>
    <string name="TextViewFilter">Tìm kiếm: </string>
    <string name="TextViewTextHintSearch">Tên khách hàng...</string>
    <string name="ButtonTimeIn">Ghi TG đến</string>
    <string name="ButtonTimeOut">Ghi TG đi</string>
    <string name="ButtonEdit">Chỉnh sửa</string>
    <string name="ButtonUpdate">Cập nhật</string>
    <string name="ButtonAddNew">Thêm mới</string>
    <string name="ButtonShowCustomerWhenLocationIsNull">Hiển thị khách hàng</string>
    <string name="ButtonDeleteAll">Xóa</string>
    <string name="ButtonView">Xem</string>
    <string name="TextViewHeaderActive">Kích hoạt:</string>
    <string name="TextViewHeaderCustomerCode">Mã:</string>
    <string name="TextViewHeaderCustomerName">Tên:</string>
    <string name="TextViewHeaderCustomerCategory">Kênh:</string>
    <string name="TextViewHeaderCustomerAddress">Đ.chỉ:</string>
    <string name="TextViewHeaderCustomerDistance">K.cách (m):</string>
    <string name="TextViewHeaderCustomerMtd">Mtd:</string>
    <string name="TextViewHeaderCustomer2M">- 2M:</string>
    <string name="TextViewHeaderCustomer3M">- 3M:</string>
    <string name="TextViewCustomerAllowTakePhoto">Danh sách khách hàng</string>
    <string name="TextViewFilterbyCustomerType">Loại</string>
    <string name="ButtonTakePhoto">Chụp ảnh</string>
    <string name="TextViewDateTakePhoto">Ngày</string>
    <string name="TextViewFileNamePhoto">Tên hình</string>
    <string name="TextViewCaptionLayoutCustomerAddnew">DANH SÁCH KHÁCH HÀNG THÊM MỚI</string>
    <string name="TextViewCustomerAddnew">Add new</string>
    <string name="codeCustomer">Mã Khách Hàng:</string>
    <string name="nameCustomer">"Tên Khách Hàng: "</string>
    <string name="phoneNumber">"Số điện thoại: "</string>
    <string name="addressCustomer">Địa chỉ:</string>
    <string name="createDate">Ngày khởi tạo:</string>
</resources>