<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/bg_layout"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:overScrollMode="always">

        <LinearLayout
            android:id="@+id/layoutCodeCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/codeCustomer"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCodeCustomer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:text=""
                android:textColor="#000"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutNameCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutCodeCustomer"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nameCustomer"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNameCustomer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:text=""
                android:textColor="#000"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPhoneCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutNameCustomer"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phoneNumber"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPhoneCCustomer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:text=""
                android:textColor="#000"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAddressCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutPhoneCustomer"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addressCustomer"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:text=""
                android:textColor="#000"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutCreateDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutAddressCustomer"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/createDate"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCreateDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:text=""
                android:textColor="#000"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/layout"
        android:background="@color/white" />
</RelativeLayout>