<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/buttonlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:background="@color/header"
        android:gravity="left|top"
        android:orientation="horizontal"
        android:paddingTop="2dp"
        android:paddingBottom="2dp">

        <RelativeLayout
            android:id="@+id/buttonlayout2"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <RelativeLayout
                android:id="@+id/rlAddNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/imgAddNew"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="2dp"
                    android:src="@drawable/ic_baseline_add_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="3dp"
                    android:layout_toRightOf="@+id/imgAddNew"
                    android:text="@string/TextViewCustomerAddnew"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tVEditCustomer"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:paddingLeft="7dp"
                android:paddingTop="5dp"
                android:text="@string/TextViewCaptionLayoutCustomerAddnew"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />

<!--            <ImageView-->
<!--                android:id="@+id/ImgLogo"-->
<!--                android:layout_width="40dp"-->
<!--                android:layout_height="35dp"-->
<!--                android:layout_alignParentRight="true"-->
<!--                android:layout_centerVertical="true"-->
<!--                android:layout_marginRight="2dp"-->
<!--                android:src="@drawable/v2_200" />-->
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#ABBAC3">

        <TextView
            android:id="@+id/txtSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/TextViewFilter"
            android:textColor="#006699"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edSearch"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_edittext"
            android:hint="Tên khách hàng"
            android:textColorHint="#97000000"
            android:drawableRight="@drawable/search"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <Button

            android:id="@+id/btnAddNew"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@drawable/bg_button"
            android:text="@string/ButtonAddNew"
            android:textColor="#ffffff"
            android:textSize="13sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnDeleteAll"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="8dip"
            android:background="@drawable/bg_button"
            android:padding="5dp"
            android:paddingLeft="0dp"
            android:text="@string/ButtonDeleteAll"
            android:textColor="#ffffff"
            android:textSize="13sp"
            android:visibility="gone" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#ffffff" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#fff">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCustomer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"></androidx.recyclerview.widget.RecyclerView>
    </FrameLayout>


</LinearLayout>